# visibility_study_v2

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/gladcore/include/glad/: glad.h
dependencies/gladcore/src/: glad.c
dependencies/imgui/: CMakeLists.txt
src/: ApplicationInstance.cpp  ApplicationInstance.h  ApplicationState.h  ApplicationWindow.cpp  ApplicationWindow.h  BuiltinProfiles.h  CMakeLists.txt  CameraProfile.h  Canvas.cpp  Canvas.h  FileSelectors.cpp  FileSelectors.h  GridConfiguration.h  HelpMenu.cpp  HelpMenu.h  Image.cpp  Image.h  ImageLoaders.cpp  ImageLoaders.h  ImagePreview.cpp  ImagePreview.h  ImagePreviewList.cpp  ImagePreviewList.h  Main.cpp  MeasurementConfigurator.cpp  MeasurementConfigurator.h  NewVehicleProjectWindow.cpp  NewVehicleProjectWindow.h  OrthoWindow.cpp  OrthoWindow.h  OrthogonalCanvas.cpp  OrthogonalCanvas.h  OutputFile.h  OutputWriter.cpp  OutputWriter.h  Platform.h  Preview.cpp  Preview.h  ProjectExplorer.cpp  ProjectExplorer.cpp~  (+11 more)
src/old/: Action.h  BezierTool.h  BezierToool.cpp  Camera2D.cpp  Camera2D.h  DisplayGrid.cpp  DisplayGrid.h  Drawable.h  Event.h  EventBus.h  EventDispatcher.h  EventManager.cpp  EventManager.h  PaintTool.cpp  PaintTool.h  PreviewLoader.cpp  PreviewLoader.h  Scene.cpp  Scene.h  VehicleProject.h~
